--- a/mapel.html
+++ b/mapel.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active text-primary fw-bold mx-2" aria-current="page" href="#">Home</a>
+              <a class="nav-link active text-primary fw-bold mx-2" aria-current="page" href="./">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-primary fw-bold mx-2" href="#">Produk</a>
@@ -50,10 +50,9 @@
       </div>
     </nav>
 
-      <!---study subjet -->
     
     
-  
+
   <div class="subject-container">
     <div class="page-center">
       <div class="subject">
@@ -63,72 +62,50 @@
         </div>
         <div class="subject-dropdown">
           <div class="subject-accordion">
-            <!--Taman kanak kanak-->
-            <div class="sbj-cont"id="tk">
-              <div class="acordion">
-                <div class="acordion-sbj">
-                  <div class="acordion-sbj-txt">
-                    <p class="font-sbj">Taman Kanak Kanak</p>
-                  </div>
-                  <div class="sbj-number">
-                    <p class="fnt-number" id="no-tk">0</p>
-                  </div>
-                  <div class="acordion-sbj-img">
-                    <img src="#">
-                  </div>
-                </div>
-                <div class="drp-dwn">
-                  <ul class="sbj-list">
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    Taman Kanak Kanak (TK)
+                  </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body"><ul class="sbj-list">
                     <li class="fnt-subject">Calistung (Baca Tulis Hitung)</li>
                     <li class="fnt-subject">Menggambar</li>
                   </ul>
                 </div>
-              </div>
-            </div>
-            <!--Sekolah Dasar--->
-            <div class="sbj-cont"id="SD">
-              <div class="acordion">
-                <div class="acordion-sbj">
-                  <div class="acordion-sbj-txt">
-                    <p class="font-sbj">Sekolah Dasar</p>
-                  </div>
-                  <div class="sbj-number">
-                    <p class="fnt-number" id="no-smp">0</p>
-                  </div>
-                  <div class="acordion-sbj-img">
-                    <img src="#">
-                  </div>
-                </div>
-                <div class="drp-dwn">
-                  <ul class="sbj-list">
-                    <li class="fnt-subject">Tematik</li>
-                    <li class="fnt-subject">Bahasa Bali</li>
-                    <li class="fnt-subject">CALISTUNG</li>
-                    <li class="fnt-subject">Bahasa Inggris</li>
-                    <li class="fnt-subject">Agama Hindu</li>
-                    <li class="fnt-subject">PKN</li>
-                    <li class="fnt-subject">IPA</li>
-                    <li class="fnt-subject">IPS</li>
-                  </ul>
                 </div>
               </div>
-            </div>
-            <!--SMP-->
-            <div class="sbj-cont"id="SMP">
-              <div class="acordion">
-                <div class="acordion-sbj">
-                  <div class="acordion-sbj-txt">
-                    <p class="font-sbj">Sekolah Menengah Pertama</p>
-                  </div>
-                  <div class="sbj-number">
-                    <p class="fnt-number" id="no-SMP">0</p>
-                  </div>
-                  <div class="acordion-sbj-img">
-                    <img src="#">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    Sekolah Dasar (SD)
+                  </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">
+                    <ul class="sbj-list">
+                      <li class="fnt-subject">Tematik</li>
+                      <li class="fnt-subject">Bahasa Bali</li>
+                      <li class="fnt-subject">CALISTUNG</li>
+                      <li class="fnt-subject">Bahasa Inggris</li>
+                      <li class="fnt-subject">Agama Hindu</li>
+                      <li class="fnt-subject">PKN</li>
+                      <li class="fnt-subject">IPA</li>
+                      <li class="fnt-subject">IPS</li>
+                    </ul>
                   </div>
                 </div>
-                <div class="drp-dwn">
-                  <ul class="sbj-list">
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    Sekolah Menengah Pertama (SMP)
+                  </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body"> <ul class="sbj-list">
                     <li class="fnt-subject">Matematika</li>
                     <li class="fnt-subject">Bahasa Indonesia</li>
                     <li class="fnt-subject">IPA</li>
@@ -136,46 +113,29 @@
                     <li class="fnt-subject">Bahasa Inggris</li>
                   </ul>
                 </div>
-              </div>
-            </div>
-            <!--SMA-->
-            <div class="sbj-cont"id="SMA">
-              <div class="acordion">
-                <div class="acordion-sbj">
-                  <div class="acordion-sbj-txt">
-                    <p class="font-sbj">Sekolah Menengah Atas</p>
-                  </div>
-                  <div class="sbj-number">
-                    <p class="fnt-number" id="no-SMA">0</p>
-                  </div>
-                  <div class="acordion-sbj-img">
-                    <img src="#">
-                  </div>
-                </div>
-                <div class="drp-dwn">
-                  <ul class="sbj-list">
-                    <li class="fnt-subject">Matematika</li>
-                    <li class="fnt-subject">Kimia</li>
-                    <li class="fnt-subject">Fisika</li>
-                    <li class="fnt-subject">Biologi</li>
-                    <li class="fnt-subject">Bahasa Inggris</li>
-                    <li class="fnt-subject">Bahsa Indonesia</li>
-                  </ul>
                 </div>
               </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingfour">
+                  <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapsefour" aria-expanded="false" aria-controls="flush-collapsefour">
+                    Sekolah Menengah Atas (SMA)
+                  </button>
+                </h2>
+                <div id="flush-collapsefour" class="accordion-collapse collapse" aria-labelledby="flush-headingfour" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">
+                    <ul class="sbj-list">
+                      <li class="fnt-subject">Matematika</li>
+                      <li class="fnt-subject">Kimia</li>
+                      <li class="fnt-subject">Fisika</li>
+                      <li class="fnt-subject">Biologi</li>
+                      <li class="fnt-subject">Bahasa Inggris</li>
+                      <li class="fnt-subject">Bahsa Indonesia</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  </div>
-
-
-  
-
-
 
 
 
